--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ chrono = "0.4.31"
 dotenv = "0.15.0"
 lazy_static = "1.4.0"
 postgres = "0.19.7"
-sqlx = { version = "0.7", features = ["runtime-async-std", "postgres", "macros", "time"]}
+sqlx = { version = "0.7", features = ["runtime-async-std", "postgres", "macros", "time", "chrono"]}
 tokio = { version = "1", features = ["full"] }
