--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ chrono = "0.4"
 
 [dependencies]
 chrono = "0.4.31"
+djangohashers = "1.7.2"
 dotenv = "0.15.0"
 lazy_static = "1.4.0"
 postgres = "0.19.7"
